<resources>
	<string name="app_name">SphinxAstro</string>
	<string name="action_settings">Settings</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="server_client_id" translatable="false">50128090633-ip543e06k8uq7g203tmoonoeslsi25p6.apps.googleusercontent.com</string>
	<string name="spirangle">Spirangle Studio</string>
	<string name="spirangle_presents">Spirangle Presents</string>
	<string name="title_app">Sphinx Astrology</string>
	<string name="title_profiles">Profiles</string>
	<string name="title_edit_profile">Edit Profile</string>
	<string name="title_text">Symbol Texts</string>
	<string name="title_edit_text">Edit Text</string>
	<string name="title_settings">Settings</string>
	<string name="title_help">Help</string>
	<string name="dialog_pick_link_title">Pick Text Link</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_ok">Ok</string>
	<string name="button_save_profile">Save Profile</string>
	<string name="check_bce">Before Common Era (BCE)</string>
	<string name="check_dst">Daylight Saving Time (DST)</string>
	<string name="check_julian">Julian Calendar</string>
	<string name="edit_date_time">YYYY-MM-DD HH:MM:SS</string>
	<string name="edit_location">City, Place, Coordinates</string>
	<string name="edit_name">First &amp; Second Name</string>
	<string name="edit_time_zone">Time Zone</string>
	<string name="text_advanced">Advanced</string>
	<string name="text_date_time">Date &amp; Time</string>
	<string name="text_location">Location</string>
	<string name="text_name">Name</string>
	<string name="text_recent_texts">Recent Texts</string>
	<string name="text_concept">Concept</string>
	<string name="text_values">Values</string>
	<string name="toolbar_search_hint">Search…</string>
	<string name="menu_cancel">Cancel</string>
	<string name="menu_charts">Charts</string>
	<string name="menu_composite_chart">Composite</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_edit_profile">Edit Profile</string>
	<string name="menu_edit_text">Edit Text</string>
	<string name="menu_help">Help</string>
	<string name="menu_help_links">Help: Links</string>
	<string name="menu_help_syntax">Help: Syntax</string>
	<string name="menu_help_text">Help: Text</string>
	<string name="menu_index">Index</string>
	<string name="menu_natal_chart">Natal</string>
	<string name="menu_new_profile">New Profile</string>
	<string name="menu_new_text">New Text</string>
	<string name="menu_open">Open</string>
	<string name="menu_preview">Preview</string>
	<string name="menu_profiles">Profiles</string>
	<string name="menu_progression_chart">Progression</string>
	<string name="menu_save">Save</string>
	<string name="menu_search">Search</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_sign_in">Sign In</string>
	<string name="menu_sign_out">Sign Out</string>
	<string name="menu_synastry_chart">Synastry</string>
	<string name="menu_transit_chart">Transit</string>
	<string name="icon_bold" translatable="false">&#xE238;</string>
	<string name="icon_italic" translatable="false">&#xE23F;</string>
	<string name="icon_underline" translatable="false">&#xE249;</string>
	<string name="icon_strike" translatable="false">&#xE257;</string>
	<string name="icon_code" translatable="false">&#xE86F;</string>
	<string name="icon_link" translatable="false">&#xE250;</string>
	<string name="icon_picture" translatable="false">&#xE410;</string>
	<string name="icon_ol" translatable="false">&#xE242;</string>
	<string name="icon_ul" translatable="false">&#xE241;</string>
	<string name="icon_align_center" translatable="false">&#xE234;</string>
	<string name="icon_align_justify" translatable="false">&#x235;</string>
	<string name="icon_align_left" translatable="false">&#xE236;</string>
	<string name="icon_align_right" translatable="false">&#xE237;</string>
	<string name="icon_help" translatable="false">&#xE8FD;</string>
	<string name="icon_globe" translatable="false">&#xE894;</string>
	<string name="icon_publish" translatable="false">&#xE255;</string>
	<string name="icon_comment" translatable="false">&#xE24C;</string>
	<string name="icon_place" translatable="false">&#xE55F;</string>
	<string name="icon_map" translatable="false">&#xE55B;</string>
	<string name="msgbox_title_initial">Sphinx Astrology</string>
	<string name="msgbox_initial"><![CDATA[
<p>This app aims to be a useful tool for students of astrology.</p>

<p>Please sign in with Google for storing profiles and texts online, and for sharing with others.</p>

<p>For full documentation, see Help in the menu.</p>
]]></string>
	<string name="toast_db_error">Database has not been properly created. Please reinstall app.</string>
	<string name="toast_signin_failed">Signing in failed</string>
	<string name="toast_profile_saved">Profile saved</string>
	<string name="toast_profile_deleted">Profile deleted</string>
	<string name="toast_text_saved">Text saved</string>
	<string name="toast_text_change_static">This text may not be changed</string>
	<string name="toast_text_deleted">Text deleted</string>
	<string name="toast_save_failed">Save failed</string>
	<string name="toast_delete_failed">Delete failed</string>
	<string name="list_text_empty">There is no text available for this symbol, but you can write your own interpretation.</string>
	<string name="coordinate_directions">EWNS</string>
	<string name="installing">Installing %1$s...</string>
	<string name="horoscope_now">Now</string>
	<string name="label_greenwich">Greenwich</string>
	<string name="label_england">England</string>
	<string name="label_gb">GB</string>
	<string name="days">days</string>
	<string name="unknown">Unknown</string>
	<string name="table_planets">Planets</string>
	<string name="table_houses">Houses</string>
	<string name="table_aspect_table">Aspect Table</string>
	<string name="table_elements">Elements</string>
	<string name="table_aspects">Aspect List</string>
	<string name="table_aspect_patterns">Aspect Patterns</string>
	<string name="table_arabic_parts">Arabic Parts</string>
	<string-array name="actionbar_graph_views">
		<item>Wheel</item>
		<item>Planets</item>
		<item>Houses</item>
		<item>Aspect Table</item>
		<item>Elements</item>
		<item>Qualities</item>
		<item>Aspect List</item>
		<item>Aspect Patterns</item>
		<item>Arabic Parts</item>
	</string-array>
	<string name="text_help_index"><![CDATA[
<h1>Sphinx Astrology</h1>
<h3>Index</h3>
<p>
<ul>
  <li><a href="help:sphinxAstrology">Sphinx Astrology</a></li>
  <li><a href="help:faq">FAQ</a></li>
  <li><a href="help:horoscope">Horoscope</a></li>
  <li><a href="help:profiles">Profiles</a></li>
  <li><a href="help:editProfile">Edit Profile</a></li>
  <li><a href="help:editText">Edit Text</a></li>
  <li><a href="help:textSyntax">Text Syntax</a></li>
  <li><a href="help:textLinks">Text Links</a></li>
  <li><a href="help:textTags">Text Tags</a></li>
  <li><a href="help:settings">Settings</a></li>
</ul>
</p>

]]></string>
	<string name="text_help_faq"><![CDATA[
<h1>Sphinx Astrology</h1>
<h3>FAQ</h3>


]]></string>
	<string name="text_help_sphinx"><![CDATA[
<h1>Sphinx Astrology</h1>
<h3>About</h3>


]]></string>
	<string name="text_help_horoscope"><![CDATA[
<h1>Sphinx Astrology</h1>
<h3>Horoscope</h3>

]]></string>
	<string name="text_help_profiles"><![CDATA[
<h1>Sphinx Astrology</h1>
<h3>Profiles</h3>

]]></string>
	<string name="text_help_edit_profile"><![CDATA[
<h1>Sphinx Astrology</h1>
<h3>Edit Profile</h3>
<p>Enter name of the profile, for a person it should be the first and second name, or it can be some other name if it refers to a specific point in time, e.g. a solar eclipse or similar.</p>

<h5>Date & Time</h5>
<p>Date should be in the format &quot;YYYY-MM-DD&quot;. Time should be in the format &quot;HH:MM:SS&quot;, but &quot;HH&quot; and &quot;HH:MM&quot; are accepted. Time can be omitted, in which case &quot;12:00&quot; will be used. Only number input is accepted, dashes and colons are inserted automatically.</p>

<h5>Location</h5>
<p>Location can be a city, place or even street address, be general or specific. Leave the field empty to use current location. You can also enter exact longitude and latitude coordinates in the format &quot;DDDXMMSS DDDXMMSS&quot;, where &apos;X&apos; the direction, e.g. &apos;E&apos;, &apos;W&apos;, &apos;N&apos;, &apos;S&apos;. Press the globe button to the right for finding locations. Select the correct location in the list below.</p>

<p>Daylight Saving Time is set automatically, but may be set manually also.</p>

<h5>Advanced</h5>
<p>Advanced data permits fine adjusting the horoscope.</p>

<h5>See Also</h5>
<p><a href="help:sphinxAstrology">Sphinx Astrology</a><br>
<a href="help:faq">FAQ</a></p>

]]></string>
	<string name="text_help_edit_text"><![CDATA[
<h1>Sphinx Astrology</h1>
<h3>Edit Text</h3>

]]></string>
</resources>