<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
>
	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:theme="@style/SphinxTheme.Toolbar"
		style="@style/SphinxActionBar"
	>
	</androidx.appcompat.widget.Toolbar>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
	>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
		>
			<ScrollView
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:scrollbars = "vertical"
				android:scrollbarStyle="insideInset"
			>
				<LinearLayout
					android:orientation="vertical"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
				>
						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/text_name"
						/>
						<EditText
							android:id="@+id/edit_name"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/edit_name"
							android:inputType="textPersonName|textCapWords"
						/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/text_date_time"
						/>
						<EditText
							android:id="@+id/edit_date_time"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/edit_date_time"
							android:digits="0123456789"
							android:inputType="datetime"
						/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/text_location"
						/>
						<LinearLayout
							android:orientation="horizontal"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
						>
							<EditText
								android:id="@+id/edit_location"
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:layout_gravity="center_vertical|left"
								android:hint="@string/edit_location"
								android:inputType="textPostalAddress|textCapWords"
							/>
							<Button
								android:id="@+id/button_find_location"
								android:layout_width="wrap_content"
								android:layout_height="match_parent"
								android:layout_gravity="center_vertical|right"
								android:text="@string/icon_place"
								android:onClick="findLocation"
								style="@style/SphinxUnicodeIconButton"
							/>
						</LinearLayout>

						<Spinner
							android:id="@+id/spinner_location"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
						/>

						<EditText
							android:id="@+id/edit_time_zone"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/edit_time_zone"
						/>

						<CheckBox
							android:id="@+id/check_dst"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/check_dst"
						/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/text_advanced"
						/>
						<CheckBox
							android:id="@+id/check_julian"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/check_julian"
						/>

						<CheckBox
							android:id="@+id/check_bce"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/check_bce"
						/>

				</LinearLayout>
			</ScrollView>
		</LinearLayout>

		<RelativeLayout
			android:id="@+id/loading_panel"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/loading_background"
			android:gravity="center"
			android:visibility="gone"
		>
			<ProgressBar
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:indeterminate="true"
				style="?android:attr/progressBarStyle"
			/>
		</RelativeLayout>
	</RelativeLayout>
</LinearLayout>

